Required changes applied

--- a/main/index.html
+++ b/main/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="//fonts.googleapis.com/css2?family=Roboto&display=swap">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" >
-        <link rel="stylesheet" href="../blog/blog.css">
-        <link rel="shortcut icon" href="../images/wine-blog-icon-small.png" type="image/x-icon" />
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="shortcut icon" href="images/wine-blog-icon-small.png" type="image/x-icon" />
         <script src="https://kit.fontawesome.com/a9c74e2656.js"></script>
         <title>Wine blog</title>
     </head>
@@ -16,13 +16,13 @@
             <nav class="menu-header-container element">
                     <ul id="menu-header" class="menu-header">
                         <li id="menu-item-1" class="menu-item">
-                            <a href="../blog/">Wine blog</a>
+                            <a href="index.html">Wine blog</a>
                         </li>
                         <li id="menu-item-2" class="menu-item">
-                            <a href="../errors/404.html">Design System</a>
+                            <a href="errors/404.html">Design System</a>
                         </li>
                         <li id="menu-item-3" class="menu-item">
-                            <a href="../errors/404.html">Contacts</a>
+                            <a href="errors/404.html">Contacts</a>
                         </li>
                     </ul>
             </nav>
@@ -46,12 +46,12 @@
                             <li class="bg-custom-posts-item bg-custom-posts-large element">
                                 <div class="bg-custom-posts-item-inner element">
                                     <figure id="bg-custom-posts-thumb-x1-1" class="bg-custom-posts-thumb-x1 element"> 
-                                        <img class="bg-custom-posts-x1-image" src="../images/wine-tasting-challenge-1.jpg" alt="wine testing challenge">
+                                        <img class="bg-custom-posts-x1-image" src="images/wine-tasting-challenge-1.jpg" alt="wine testing challenge">
                                     </figure>
                                     <div class="bg-custom-posts-content col-content element">
                                         <div class="bg-custom-posts-header-1 element">
                                             <h3 class="bg-custom-posts-xl-title  bg-title element">
-                                                <a href="../posts/post.html">Tasting Challenge: California Chardonnay</a>
+                                                <a href="posts/post.html">Tasting Challenge: California Chardonnay</a>
                                             </h3>
                                             <div class="bg-meta entry-meta element">
                                                 <span class="bg-entry-meta-date-updated element">
@@ -67,12 +67,12 @@
                             <li class="bg-custom-posts-item bg-custom-posts element">
                                 <div class="bg-custom-posts-item-inner-small element">
                                     <figure id="bg-custom-posts-thumb-x2-1" class="bg-custom-posts-thumb-x2 element"> 
-                                        <img class="bg-custom-posts-x2-image" src="../images/understanding-chardonnay-tiny.jpg" alt="wine testing challenge">
+                                        <img class="bg-custom-posts-x2-image" src="images/understanding-chardonnay-tiny.jpg" alt="wine testing challenge">
                                     </figure>
                                     <div class="bg-custom-posts-content-small col-content element">
                                         <div class="bg-custom-posts-header-small element">
                                             <h3 class="bg-custom-posts-x2-title bg-title element">
-                                                <a href="../posts/post.html">Understanding the many faces of Chardonnay</a>
+                                                <a href="posts/post.html">Understanding the many faces of Chardonnay</a>
                                             </h3>
                                             <div class="bg-meta entry-meta element">
                                                 <span class="bg-entry-meta-date-updated element">
@@ -87,12 +87,12 @@
                             <li class="bg-custom-posts-item bg-custom-posts element">
                                 <div class="bg-custom-posts-item-inner-small element">
                                     <figure id="bg-custom-posts-thumb-x2-2" class="bg-custom-posts-thumb-x2 element"> 
-                                        <img class="bg-custom-posts-x2-image" src="../images/taste-chardonnay-tiny.jpg" alt="teste chardonnay">
+                                        <img class="bg-custom-posts-x2-image" src="images/taste-chardonnay-tiny.jpg" alt="teste chardonnay">
                                     </figure>
                                     <div class="bg-custom-posts-content-small col-content element">
                                         <div class="bg-custom-posts-header-small element">
                                             <h3 class="bg-custom-posts-x2-title bg-title element">
-                                                <a href="../posts/post.html">Taste: Chardonnay</a>
+                                                <a href="posts/post.html">Taste: Chardonnay</a>
                                             </h3>
                                             <div class="bg-meta entry-meta element">
                                                 <span class="bg-entry-meta-date-updated element">
@@ -107,12 +107,12 @@
                             <li class="bg-custom-posts-item bg-custom-posts element">
                                 <div class="bg-custom-posts-item-inner-small element">
                                     <figure id="bg-custom-posts-thumb-x2-3" class="bg-custom-posts-thumb-x2 element"> 
-                                        <img class="bg-custom-posts-x2-image" src="../images/kershaw-tiny.jpg" alt="Kershaw Winery">
+                                        <img class="bg-custom-posts-x2-image" src="images/kershaw-tiny.jpg" alt="Kershaw Winery">
                                     </figure>
                                     <div class="bg-custom-posts-content-small col-content element">
                                         <div class="bg-custom-posts-header-small element">
                                             <h3 class="bg-custom-posts-x2-title bg-title element">
-                                                <a href="../posts/post.html">The Amazing Wines of Richard Kershaw</a>
+                                                <a href="posts/post.html">The Amazing Wines of Richard Kershaw</a>
                                             </h3>
                                             <div class="bg-meta entry-meta element">
                                                 <span class="bg-entry-meta-date-updated element">
@@ -135,12 +135,12 @@
                             <li class="bg-custom-posts-item bg-custom-posts-large element">
                                 <div class="bg-custom-posts-item-inner element">
                                     <figure id="bg-custom-posts-thumb-x1-2" class="bg-custom-posts-thumb-x1 element"> 
-                                        <img class="bg-custom-posts-x1-image" src="../images/the-reasons-to-choose-riesling-small.jpg" alt="The reasons to choose riesling">
+                                        <img class="bg-custom-posts-x1-image" src="images/the-reasons-to-choose-riesling-small.jpg" alt="The reasons to choose riesling">
                                     </figure>
                                     <div class="bg-custom-posts-content col-content element">
                                         <div class="bg-custom-posts-header-1 element">
                                             <h3 class="bg-custom-posts-xl-title bg-title element">
-                                                <a href="../posts/post.html">The Reasons to Choose Riesling</a>
+                                                <a href="posts/post.html">The Reasons to Choose Riesling</a>
                                             </h3>
                                             <div class="bg-meta entry-meta element">
                                                 <span class="bg-entry-meta-date-updated element">
@@ -156,12 +156,12 @@
                             <li class="bg-custom-posts-item bg-custom-posts element">
                                 <div class="bg-custom-posts-item-inner-small element">
                                     <figure id="bg-custom-posts-thumb-x2-4" class="bg-custom-posts-thumb-x2 element"> 
-                                        <img class="bg-custom-posts-x2-image" src="../images/riesling-of-the-year-tiny.jpg" alt="Riesling of the year">
+                                        <img class="bg-custom-posts-x2-image" src="images/riesling-of-the-year-tiny.jpg" alt="Riesling of the year">
                                     </figure>
                                     <div class="bg-custom-posts-content-small col-content element">
                                         <div class="bg-custom-posts-header-small element">
                                             <h3 class="bg-custom-posts-x2-title bg-title element">
-                                                <a href="../posts/post.html">Second Consecutive 'Riesling of the Year' Trophy for Reillys Watervale Riesling</a>
+                                                <a href="posts/post.html">Second Consecutive 'Riesling of the Year' Trophy for Reillys Watervale Riesling</a>
                                             </h3>
                                             <div class="bg-meta entry-meta element">
                                                 <span class="bg-entry-meta-date-updated element">
@@ -176,12 +176,12 @@
                             <li class="bg-custom-posts-item bg-custom-posts element">
                                 <div class="bg-custom-posts-item-inner-small element">
                                     <figure id="bg-custom-posts-thumb-x2-5" class="bg-custom-posts-thumb-x2 element"> 
-                                        <img class="bg-custom-posts-x2-image" src="../images/heroes-of-riesling-tiny.jpg" alt="Heroes of Riesling">
+                                        <img class="bg-custom-posts-x2-image" src="images/heroes-of-riesling-tiny.jpg" alt="Heroes of Riesling">
                                     </figure>
                                     <div class="bg-custom-posts-content-small col-content element">
                                         <div class="bg-custom-posts-header-small element">
                                             <h3 class="bg-custom-posts-x2-title bg-title element">
-                                                <a href="../posts/post.html">Heroes of Riesling</a>
+                                                <a href="posts/post.html">Heroes of Riesling</a>
                                             </h3>
                                             <div class="bg-meta entry-meta element">
                                                 <span class="bg-entry-meta-date-updated element">
@@ -196,12 +196,12 @@
                             <li class="bg-custom-posts-item bg-custom-posts element">
                                 <div class="bg-custom-posts-item-inner-small element">
                                     <figure id="bg-custom-posts-thumb-x2-5" class="bg-custom-posts-thumb-x2 element"> 
-                                        <img class="bg-custom-posts-x2-image" src="../images/riesling-releases-for-spring.jpg" alt="Riesling Releases for Spring">
+                                        <img class="bg-custom-posts-x2-image" src="images/riesling-releases-for-spring.jpg" alt="Riesling Releases for Spring">
                                     </figure>
                                     <div class="bg-custom-posts-content-small col-content element">
                                         <div class="bg-custom-posts-header-small element">
                                             <h3 class="bg-custom-posts-x2-title bg-title element">
-                                                <a href="../posts/post.html">Riesling Releases for Spring</a>
+                                                <a href="posts/post.html">Riesling Releases for Spring</a>
                                             </h3>
                                             <div class="bg-meta entry-meta element">
                                                 <span class="bg-entry-meta-date-updated element">
@@ -224,7 +224,7 @@
                         </header>
                         <div class="bg-subscribe-container-inner">
                             <figure class="bg-subscribe-expert">
-                                <img src="../images/expert.gif" alt="Expert" class="bg-expert">
+                                <img src="images/expert.gif" alt="Expert" class="bg-expert">
                                 <figcaption class="bg-expert-text">Vine Expert</figcaption>
                             </figure>
                             <p class="bg-subscribe-text">Would you like to know the latest knews about best wines in the world? Click below to subscribe.</p>
@@ -232,81 +232,6 @@
                         <button class="bg-subscribe-button">Subscribe</button>
                     </div>
                 </div>
-                <!-- <div class="bg-sidebar element">
-                    <div id="design-system" class="bg-widget-design-system element"></div>
-                    <div id="custom-posts" class="bg-widget-custom-posts-2 element">
-                        <h4 class="widget-title element"></h4>
-                        <ul class="bg-widget-custom-posts element">
-                            <li class="bg-custom-posts-item bg-custom-posts-small element"></li>
-                            <li class="bg-custom-posts-item bg-custom-posts-small element"></li>
-                            <li class="bg-custom-posts-item bg-custom-posts-small element"></li>
-                        </ul>
-                    </div>
-                    <div id="bg-widget-tabbed" class="bg-tab-content bg-tab-news element">
-                        <div class="bg-tabbed-widget element">
-                            <div class="bg-tab-buttons element"></div>
-                            <div id="bd-tab-items-1" class="bd-tab-content element">
-                                <ul class="bd-tab-content-posts element">
-                                    <li class="bd-tab-post-items element"></li>
-                                    <li class="bd-tab-post-items element"></li>
-                                    <li class="bd-tab-post-items element"></li>
-                                    <li class="bd-tab-post-items element"></li>
-                                    <li class="bd-tab-post-items element"></li>
-                                    <li class="bd-tab-post-items element"></li>
-                                    <li class="bd-tab-post-items element"></li>
-                                    <li class="bd-tab-post-items element"></li>
-                                    <li class="bd-tab-post-items element"></li>
-                                    <li class="bd-tab-post-items element"></li>
-                                </ul>
-                            </div>
-                            <div id="bd-tab-items-2" class="bd-tab-content bd-tab-cloud element">
-                                <div class="bd-tab-content-cloud element">
-                                    <a class="tag-cloud-link element">Red wine</a>
-                                    <a class="tag-cloud-link element">White wine</a>
-                                    <a class="tag-cloud-link element">Rose wine</a>
-                                    <a class="tag-cloud-link element">Riesling</a>
-                                    <a class="tag-cloud-link element">Champaigne</a>
-                                    <a class="tag-cloud-link element">Russian wine</a>
-                                    <a class="tag-cloud-link element">Cheap wine</a>
-                                    <a class="tag-cloud-link element">Expensive wine</a>
-                                    <a class="tag-cloud-link element">Exclusive wine</a>
-                                    <a class="tag-cloud-link element">Imported wine</a>
-                                </div>
-                        </div>
-                        <div id="bd-tab-items-3" class="bg-tab-content bg-tab-comments element">
-                            <ul class="bd-tab-content-comments element">
-                                <li class="bd-tab-comment-item element">
-                                    <span class="bd-tab-comment-avatar element">
-                                        <img src="" width="24" height="24">
-                                    </span>
-                                    <span class="bd-tab-comment-author element">Author</span>
-                                    <a href="">
-                                        <span class="bd-tab-comment-excerpt element">Comment</span>
-                                    </a>
-                                </li>
-                                <li class="bd-tab-comment-item element">
-                                    <span class="bd-tab-comment-avatar element">
-                                        <img src="" width="24" height="24">
-                                    </span>
-                                    <span class="bd-tab-comment-author element">Author</span>
-                                    <a href="">
-                                        <span class="bd-tab-comment-excerpt element">Comment</span>
-                                    </a>
-                                </li>
-                                <li class="bd-tab-comment-item element">
-                                    <span class="bd-tab-comment-avatar element">
-                                        <img src="" width="24" height="24">
-                                    </span>
-                                    <span class="bd-tab-comment-author element">Author</span>
-                                    <a href="">
-                                        <span class="bd-tab-comment-excerpt element">Comment</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div> -->
-            
             </div>
             <footer class="bg-footer element">
                 <div class=bg-footer-container element></div>
