--- a/main/errors/404.html
+++ b/main/errors/404.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-        <link rel="stylesheet" href="404.css">
+        <link rel="stylesheet" href="css/404.css">
         <link rel="shortcut icon" href="../images/wine-blog-icon-small.png" type="image/x-icon" />
         <title>Wine blog</title>
     </head>
